# Macground

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  today.py
motto/: .gitignore  Cargo.toml  README.md
motto/scripts/: image_layout.sh  layout1.sh  layout2.sh  test_layout.sh
motto/src/: args.rs  background.rs  main.rs  source.rs  text.rs
scripts/: message_layout.sh  quote_layout.sh  test_layout.sh
src/: args.rs  main.rs  source.rs  text.rs  utils.rs
